docs: add guide pages

--- a/docs/.vitepress/theme/styles.css
+++ b/docs/.vitepress/theme/styles.css
@@ -1,6 +1,7 @@
  :root {
     --vp-c-brand: #c8866a;
     --vp-c-brand-1: #c8866a;
+    --vp-c-brand-2: #c8866a;
     --vp-c-brand-light: #c8866a;
     --vp-c-brand-lighter: #db9e82;
     --vp-c-brand-lightest: #db9e82;
